# libposix

./: .travis.yml  Makefile.am  README.rst  TODO  configure.ac  configure.sh  descriptor.cc  descriptor.h  directory.cc  directory.h  error.cc  error.h  feature.cc  feature.h  file.cc  file.h  group.cc  group.h  local_socket.cc  local_socket.h  message_queue.cc  message_queue.h  mode.cc  module.cc  module.h  pathname.cc  pathname.h  process.cc  process.h  process_group.cc  process_group.h  socket.cc  socket.h  sysv_segment.cc  user.cc  user.h  version.cc
doc/doxygen/: Doxyfile  mainpage.h
doc/examples/: .gitignore  Makefile  shmcat.cc
etc/: doap.rdf
etc/coverity/: model.cc
lib/: Makefile.am  fdopendir.c  fdopendir.h  fstatat.c  fstatat.h  libcompat.h  linkat.c  linkat.h  mkdirat.c  mkdirat.h  mkfifoat.c  mkfifoat.h  openat.c  openat.h  readlinkat.c  readlinkat.h  renameat.c  renameat.h  symlinkat.c  symlinkat.h  unlinkat.c  unlinkat.h
src/: Makefile.am  posix++.h
src/posix++/: Makefile.am  descriptor.cc  descriptor.h  directory.cc  directory.h  error.cc  error.h  feature.cc  feature.h  file.cc  file.h  group.cc  group.h  local_socket.cc  local_socket.h  mapped_file.cc  mapped_file.h  memory_mapping.cc  memory_mapping.h  message_queue.cc  message_queue.h  mode.cc  mode.h  module.cc  module.h  named_pipe.cc  named_pipe.h  pathname.cc  pathname.h  process.cc  process.h  process_group.cc  process_group.h  semaphore.h  socket.cc  socket.h  stdio.cc  stdio.h  sysv_segment.cc  sysv_segment.h  (+4 more)
test/: .gitignore  Makefile.am  check_descriptor.cc  check_directory.cc  check_error.cc  check_feature.cc  check_file.cc  check_group.cc  check_local_socket.cc  check_mapped_file.cc  check_memory_mapping.cc  check_message_queue.cc  check_module.cc  check_named_pipe.cc  check_pathname.cc  check_process.cc  check_process_group.cc  check_semaphore.cc  check_socket.cc  check_stdio.cc  check_sysv_segment.cc  check_user.cc  check_version.cc
test/posix++/: .gitignore  Makefile.am  check_directory.cc  check_feature.cc  check_file.cc  check_local_socket.cc  check_memory_mapping.cc  check_message_queue.cc  check_process.cc  check_sysv_segment.cc  check_user.cc  check_version.cc
